fix issue #10 , fix CSS on footer (flexbox broke on IE&FF)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -97,13 +97,12 @@ footer {
   margin-bottom: 2.5rem;
   width: 300px; }
   footer ul {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around; }
+    min-width: 100vw;
+    margin-left: -22px; }
     footer ul li:not(:first-child)::before {
       content: '・'; }
     footer ul li {
-      flex-basis: 100px; }
+      float: left; }
       footer ul li a {
         color: #fff;
         font-size: 1.1rem;
